--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "license": "ISC",
   "description": "our Clod notebook backend",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0"
   },
   "devDependencies": {
